[gd_scene load_steps=5 format=3 uid="uid://c3dql0axd3bdp"]

[ext_resource type="Script" uid="uid://cpeqjxpxr33fk" path="res://main_menu.gd" id="1_eiy7p"]
[ext_resource type="Texture2D" uid="uid://gnw0cu5viffa" path="res://canvas.jpg" id="1_i26rj"]
[ext_resource type="FontFile" uid="uid://7krampk6w12h" path="res://font/King Gaming Free Trial.otf" id="3_h7a2f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7a2f"]
bg_color = Color(0.039215688, 0.039215688, 0.039215688, 0.78431374)
border_color = Color(0.0635864, 0.04030696, 0.0047757076, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_eiy7p")

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 648.0
texture = ExtResource("1_i26rj")

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 101.0
offset_top = 5.0
offset_right = 1094.0
offset_bottom = 147.0
theme_override_colors/font_color = Color(1, 0.45882353, 0.11372549, 1)
theme_override_fonts/font = ExtResource("3_h7a2f")
theme_override_font_sizes/font_size = 100
text = "NUESTRA TIERRA"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 767.0
offset_top = 225.0
offset_right = 1141.0
offset_bottom = 474.0
alignment = 1

[node name="BtnIniciar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7a2f")
theme_override_font_sizes/font_size = 30
text = "INICIAR"

[node name="BtnConfig" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7a2f")
theme_override_font_sizes/font_size = 30
text = "CONFIGURACION
"

[node name="BtnSalir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7a2f")
theme_override_font_sizes/font_size = 30
text = "SALIR
"

[node name="Configuraciones" type="Panel" parent="."]
offset_left = 4.0
offset_top = -3.0
offset_right = 1154.0
offset_bottom = 650.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h7a2f")

[node name="Label" type="Label" parent="Configuraciones"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -419.99994
offset_top = 14.000002
offset_right = -32.99994
offset_bottom = 71.0
grow_horizontal = 2
scale = Vector2(2.365, 2.365)
theme_override_fonts/font = ExtResource("3_h7a2f")
theme_override_font_sizes/font_size = 36
text = "CONFIGURACIONES"
language = "ESPAÃ‘OL"

[node name="MarginContainer" type="MarginContainer" parent="Configuraciones"]
layout_mode = 0
offset_left = 97.0
offset_top = 149.0
offset_right = 869.0
offset_bottom = 540.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Configuraciones/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Configuraciones/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CONFIGURACIONES DEL SISTEMA"

[node name="HSeparator" type="HSeparator" parent="Configuraciones/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Configuraciones/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Configuraciones/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Configuraciones/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Configuraciones/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TRAFICO"

[node name="trafico" type="HSlider" parent="Configuraciones/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Configuraciones/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "GRAFICOS DEL JUEGO"

[node name="HSlider" type="HSlider" parent="Configuraciones/MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/BtnIniciar" to="MainMenu" method="_on_btn_iniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnConfig" to="MainMenu" method="_on_btn_config_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnSalir" to="MainMenu" method="_on_btn_salir_pressed"]
